--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <title>Logiqa Supply</title>
+  <!-- Подключаем библиотеку Excel -->
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <!-- Подключаем иконки -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <!-- Подключаем стили -->
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,7 +19,7 @@
     <div class="spinner"></div>
   </div>
 
-  <!-- 1. DASHBOARD (ГЛАВНАЯ) -->
+  <!-- 1. DASHBOARD (ГЛАВНАЯ - КАНБАН) -->
   <div id="view-dashboard" class="screen">
     <div class="dash-header">
       <div class="dash-title">
@@ -50,7 +53,7 @@
     <div class="dash-header">
       <div class="dash-title">
         <button class="btn btn-text" onclick="app.goHome()"><i class="fas fa-arrow-left"></i> Назад</button>
-        <span style="font-size:20px; font-weight:bold; margin-left:10px;">📦 Завершенные закупы</span>
+        <span style="font-size:20px; font-weight:bold; margin-left:10px;">📦 Архив</span>
       </div>
     </div>
     <div class="project-grid" id="archiveList" style="padding:20px;"></div>
@@ -97,41 +100,42 @@
     </div>
   </div>
 
-  <!-- 4. BUYER (СНАБЖЕНЕЦ - ОБНОВЛЕННЫЙ) -->
+  <!-- 4. BUYER (СНАБЖЕНЕЦ - ВОТ ТУТ ГЛАВНЫЕ ИЗМЕНЕНИЯ) -->
   <div id="view-buyer" class="screen hidden">
     <div class="buy-header">
-      <div style="display:flex; justify-content:space-between; align-items:center;">
-        <button class="btn" style="color:white; padding:0;" onclick="buyer.checkClose()"><i
-            class="fas fa-arrow-left"></i></button>
-        <span style="font-weight:800; font-size:18px;" id="buyTitle">Закуп</span>
-        <div style="width:20px"></div>
+      <!-- Шапка с кнопкой закрытия -->
+      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom: 10px;">
+        <span style="font-weight:800; font-size:20px; color:white;" id="buyTitle">Закуп</span>
+        <button class="btn-close-app" onclick="buyer.checkClose()">✕ Закрыть</button>
       </div>
 
-      <!-- Прогресс текстом -->
+      <!-- Вкладки (Tabs) -->
+      <div class="buy-tabs">
+        <button id="tab-todo" class="buy-tab active" onclick="buyer.setTab('todo')">🛒 В работе</button>
+        <button id="tab-done" class="buy-tab" onclick="buyer.setTab('done')">✅ Куплено</button>
+      </div>
+
+      <!-- Фильтры -->
+      <div class="filter-scroll" id="buyFilters" style="margin-top: 10px;"></div>
+
+      <!-- Прогресс -->
       <div class="buy-progress-wrap">
-        <span id="buyProgressText">0 из 0</span>
+        <span id="buyProgressText">0 / 0</span>
         <span id="buyTotalSum" style="font-weight:bold;">0 ₸</span>
-      </div>
-
-      <!-- Горизонтальные фильтры (Табы) -->
-      <div class="filter-scroll" id="buyFilters">
-        <!-- Кнопки генерируются JS -->
       </div>
     </div>
 
-    <!-- Список товаров -->
+    <!-- Список -->
     <div class="buy-list" id="buyList"></div>
 
-    <!-- ПАНЕЛЬ СОХРАНЕНИЯ -->
+    <!-- Панель сохранения -->
     <div id="unsavedBar">
       <span>Есть изменения</span>
       <button class="save-btn" onclick="buyer.saveBatch()">💾 Сохранить</button>
     </div>
   </div>
 
-  <!-- === МОДАЛЬНЫЕ ОКНА (ТЕПЕРЬ ОНИ СНАРУЖИ, ЭТО ВАЖНО) === -->
-
-  <!-- Импорт -->
+  <!-- === МОДАЛЬНЫЕ ОКНА === -->
   <div id="modal" class="hidden">
     <div class="dash-header">
       <h2>Импорт</h2>
@@ -145,34 +149,24 @@
     </div>
   </div>
 
-  <!-- Редактор поставщиков -->
   <div id="supEditModal" class="modal-overlay hidden">
     <div class="modal-box" style="width:600px; max-width:95%;">
-      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
-        <h3>👥 База поставщиков</h3>
-        <button class="btn btn-primary" onclick="app.addSupplierRow()">+ Добавить</button>
-      </div>
+      <h3>👥 Поставщики</h3>
       <div style="max-height:400px; overflow:auto;">
         <table style="width:100%;">
-          <thead>
-            <tr>
-              <th>Имя</th>
-              <th>Телефон</th>
-              <th></th>
-            </tr>
-          </thead>
           <tbody id="supEditBody"></tbody>
         </table>
+        <button class="btn btn-def" style="width:100%; margin-top:10px;" onclick="app.addSupplierRow()">+
+          Добавить</button>
       </div>
       <div style="text-align:right; margin-top:20px;">
         <button class="btn btn-text"
           onclick="document.getElementById('supEditModal').classList.add('hidden')">Закрыть</button>
-        <button class="btn btn-p" onclick="app.saveSuppliers()">Сохранить изменения</button>
+        <button class="btn btn-p" onclick="app.saveSuppliers()">Сохранить</button>
       </div>
     </div>
   </div>
 
-  <!-- Объединение -->
   <div id="mergeModal" class="modal-overlay hidden">
     <div class="modal-box">
       <h3>Объединение</h3>
@@ -185,7 +179,6 @@
     </div>
   </div>
 
-  <!-- Выбор поставщика -->
   <div id="supModal" class="modal-overlay hidden">
     <div class="modal-box">
       <h3>Поставщик</h3>
